2009-09-03  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: Removed unneccessary call.

2009-09-02  Christian Hergert  <chris@dronelabs.com>

	* Mono.TextEditor/TextEditor.cs: Track required exposure area
	manually so we always expose a large enough area to cover all
	the pending QueueDrawArea()'s before setting repaint == false.

2009-09-02  Christian Hergert  <chris@dronelabs.com>

	* Mono.TextEditor/TextLinkEditMode.cs: Add IsIdentifier
	  property indicating if the TextLink has restricted input.
	  Space, Control+Tab and Control+Return can be used when the
	  TextLink is not an Identifier.

2009-08-27  Christian Hergert  <chris@dronelabs.com>

	* Mono.TextEditor/TextViewMargin.cs: Be a bit more resilient to
	erroneous exposure regions.

2009-08-27  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Vi/ViWordFindStrategy.cs:
	* Mono.TextEditor.PopupWindow/ListWidget.cs: Fixed compiler
	  warnings.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/gui.stetic: Update gtk# dependency.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.TextEditor.csproj: Updated dependencies. We now depend
	  on gtk# 2.12.8, Mono 2.4, and Mono.Addins 0.4.

2009-08-26  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Document.cs: Little performance fix.

2009-08-26  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Document.cs:
	* Mono.TextEditor/TextMarker.cs:
	* Mono.TextEditor/GutterMargin.cs:
	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor/TextEditorData.cs:
	* Mono.TextEditor/TextLinkEditMode.cs:
	* Mono.TextEditor/DefaultEditActions.cs:
	* Mono.TextEditor.PopupWindow/ListWidget.cs:
	* Mono.TextEditor.Highlighting/SemanticRule.cs: Fixed some
	  performance graveyards - complex text editor operations
	  should be recognizable faster.

2009-08-26  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/ITextEditorOptions.cs: Made it easier to
	  work with the text editor control by allowing that options