@@ -1,5 +1,10 @@
 2009-09-03  Mike Krüger  <mkrueger@novell.com>
 
+	* Mono.TextEditor/TextEditor.cs:
+	* Mono.TextEditor/GutterMargin.cs: Handled some redraw issues.
+
+2009-09-03  Mike Krüger  <mkrueger@novell.com>
+
 	* Mono.TextEditor/TextEditor.cs: Removed unneccessary call.
 
 2009-09-02  Christian Hergert  <chris@dronelabs.com>
